[package]
name = "steam_screenshot_backup"
version = "0.1.0"
authors = ["Woljix Software"]
edition = "2018"
build = "build.rs"

[package.metadata.winres]
ProductName = "Steam Screenshot Backup"
FileDescription = "Steam Screenshot Backup"
LegalCopyright = "Copyright © Woljix Software 2020"
ProductVersion = "1.0.0.0"

[build-dependencies]
winres = "0.1"

[dependencies]
serde = { version = "*", features= ["derive"] }
serde_json = "1.0"
toml = "*"
console = "0.12.0"
reqwest = "0.10.8"
walkdir = "2"
glob = "0.3.0"
fs_extra = "1.2.0"

[profile.dev]
opt-level = 1 
lto = 'thin'

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html