[package]
name = "steam_screenshot_backup"
version = "1.0.0"
authors = ["Woljix Software"]
edition = "2018"
build = "build.rs"

[package.metadata.winres]
ProductName = "Steam Screenshot Backup"
FileDescription = "Steam Screenshot Backup"
LegalCopyright = "Copyright © Woljix Software 2021"
#ProductVersion = "1.0.0.0"
#OriginalFilename = "steam_screenshot_backup.exe"

[build-dependencies]
winres = "0.1"

[dependencies]
serde = { version = "*", features= ["derive"] }
serde_json = "1.0"
toml = "*"
console = "0.12.0"
reqwest = { version = "0.10.8", features = ["blocking"] }
walkdir = "2"
glob = "0.3.0"
fs_extra = "1.2.0"
chrono = "0.4.19"

[profile.dev]
opt-level = 1 

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = 'thin'